--- a/server/views/layouts/index.hbs
+++ b/server/views/layouts/index.hbs
@@ -9,7 +9,7 @@
   <title>JS Game Projects</title>
 </head>
 
-<body class="container mt-5">
+<body id="body" class="container is-fluid mt-5">
   {{{body}}}
 </body>
   
