--- a/server/views/main.hbs
+++ b/server/views/main.hbs
@@ -1,231 +1,11 @@
 {{> header}}
 
-<main id="main" class="grid is-col-min-9 mt-5">
-  <div class="cell">
-    <div class="card">
-      <div class="card-image p-5">
-        <figure class="image is-4by3 background-image">
-          <img src="../no-preview-background.png" alt="Joystick background image, illustrating there's no preview of this project" />
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <p class="title is-4">Project 1</p>
-            <p class="subtitle is-6">Sprite Animations</p>
-          </div>
-        </div>
-
-        <div class="content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec
-          iaculis mauris. <a>@bulmaio</a>. <a href="#">#css</a>
-          <a href="#">#responsive</a>
-          <br />
-          <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="cell">
-    <div class="card">
-      <div class="card-image p-5">
-        <figure class="image is-4by3 background-image">
-          <img src="../no-preview-background.png" alt="Joystick background image, illustrating there's no preview of this project" />
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <p class="title is-4">Project 1</p>
-            <p class="subtitle is-6">Sprite Animations</p>
-          </div>
-        </div>
-
-        <div class="content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec
-          iaculis mauris. <a>@bulmaio</a>. <a href="#">#css</a>
-          <a href="#">#responsive</a>
-          <br />
-          <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="cell">
-    <div class="card">
-      <div class="card-image p-5">
-        <figure class="image is-4by3 background-image">
-          <img src="../no-preview-background.png" alt="Joystick background image, illustrating there's no preview of this project" />
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <p class="title is-4">Project 1</p>
-            <p class="subtitle is-6">Sprite Animations</p>
-          </div>
-        </div>
-
-        <div class="content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec
-          iaculis mauris. <a>@bulmaio</a>. <a href="#">#css</a>
-          <a href="#">#responsive</a>
-          <br />
-          <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="cell">
-    <div class="card">
-      <div class="card-image p-5">
-        <figure class="image is-4by3 background-image">
-          <img src="../no-preview-background.png" alt="Joystick background image, illustrating there's no preview of this project" />
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <p class="title is-4">Project 1</p>
-            <p class="subtitle is-6">Sprite Animations</p>
-          </div>
-        </div>
-
-        <div class="content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec
-          iaculis mauris. <a>@bulmaio</a>. <a href="#">#css</a>
-          <a href="#">#responsive</a>
-          <br />
-          <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="cell">
-    <div class="card">
-      <div class="card-image p-5">
-        <figure class="image is-4by3 background-image">
-          <img src="../no-preview-background.png" alt="Joystick background image, illustrating there's no preview of this project" />
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <p class="title is-4">Project 1</p>
-            <p class="subtitle is-6">Sprite Animations</p>
-          </div>
-        </div>
-
-        <div class="content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec
-          iaculis mauris. <a>@bulmaio</a>. <a href="#">#css</a>
-          <a href="#">#responsive</a>
-          <br />
-          <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="cell">
-    <div class="card">
-      <div class="card-image p-5">
-        <figure class="image is-4by3 background-image">
-          <img src="../no-preview-background.png" alt="Joystick background image, illustrating there's no preview of this project" />
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <p class="title is-4">Project 1</p>
-            <p class="subtitle is-6">Sprite Animations</p>
-          </div>
-        </div>
-
-        <div class="content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec
-          iaculis mauris. <a>@bulmaio</a>. <a href="#">#css</a>
-          <a href="#">#responsive</a>
-          <br />
-          <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="cell">
-    <div class="card">
-      <div class="card-image p-5">
-        <figure class="image is-4by3 background-image">
-          <img src="../no-preview-background.png" alt="Joystick background image, illustrating there's no preview of this project" />
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <p class="title is-4">Project 1</p>
-            <p class="subtitle is-6">Sprite Animations</p>
-          </div>
-        </div>
-
-        <div class="content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec
-          iaculis mauris. <a>@bulmaio</a>. <a href="#">#css</a>
-          <a href="#">#responsive</a>
-          <br />
-          <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="cell">
-    <div class="card">
-      <div class="card-image p-5">
-        <figure class="image is-4by3 background-image">
-          <img src="../no-preview-background.png" alt="Joystick background image, illustrating there's no preview of this project" />
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <p class="title is-4">Project 1</p>
-            <p class="subtitle is-6">Sprite Animations</p>
-          </div>
-        </div>
-
-        <div class="content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec
-          iaculis mauris. <a>@bulmaio</a>. <a href="#">#css</a>
-          <a href="#">#responsive</a>
-          <br />
-          <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="cell">
-    <div class="card">
-      <div class="card-image p-5">
-        <figure class="image is-4by3 background-image">
-          <img src="../no-preview-background.png" alt="Joystick background image, illustrating there's no preview of this project" />
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <p class="title is-4">Project 1</p>
-            <p class="subtitle is-6">Sprite Animations</p>
-          </div>
-        </div>
-
-        <div class="content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec
-          iaculis mauris. <a>@bulmaio</a>. <a href="#">#css</a>
-          <a href="#">#responsive</a>
-          <br />
-          <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
-        </div>
-      </div>
-    </div>
-  </div>
+{{#if projetos.length}}
+<main id="main" class="grid is-gap-5 is-col-min-9 mt-5">
+  {{#each projetos}}
+    {{> cell}}
+  {{/each}}
 </main>
+{{/if}}
 
 {{> footer}}
